metadata/force-app/main/default/objects/agf__ADM_Feature__c/fields/agf__Definition__c.field-meta.xml
<CustomField>
    <fullName>agf__Definition__c</fullName>
    <label>Definition</label>
    <type>TextArea</type>
</CustomField>