metadata/force-app/main/default/objects/agf__ADM_Feature__c/fields/agf__Enabled__c.field-meta.xml
<CustomField>
    <fullName>agf__Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>