metadata/force-app/main/default/objects/agf__ADM_Feature__c/fields/agf__Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Scrum_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Features</relationshipLabel>
    <relationshipName>Features</relationshipName>
    <type>Lookup</type>
</CustomField>